# nrf_flasher

./: .gitignore  CMakeLists.txt  Kconfig  nrf52.cfg  prj.conf
bkup/: __prj.conf  _prj.conf
boards/arm/rev5/: Kconfig.board  Kconfig.defconfig  board.cmake  rev5.dts  rev5.yaml  rev5_defconfig
src/: main.c
